added user details to machine